# sweepga

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  FASTGA_RS_BUG_REPORT.md  GDB_SKELETON_READING_BUG.md  IDENTITY_CALCULATION_SOLUTION.md  LICENSE  README.md  USAGE.md  all_pairs_stats.txt  build.rs  install.sh  instrument_wfmash.patch  paf_stats.py  regular_stats.txt  rust_onelib.c  scaffolding_algorithm.tex  test_aln_reader.rs
.github/workflows/: ci.yml
benches/: filtering_benchmarks.rs
doc/: research-disk-space.md  search-index.js
doc/search.desc/rust_out/: rust_out-desc-0-.js
docs/: ALNtoPAF_IDENTITY_CALCULATION.md  BUILD-NOTES.md  FORMAT_EQUIVALENCE_TEST_RESULTS.md  MAPPING_STORAGE_ANALYSIS.md  fastga_pangenome_analysis.typ  scaffolding_algorithm.tex
examples/: compare_filter_outcomes.rs  debug_identity.rs  debug_identity_verbose.rs  debug_raw_coordinates.rs  diagnose_format_differences.rs  test_contig_offsets.rs  test_equivalence_simple.rs  test_filtering_equivalence.rs  test_format_equivalence.rs  verify_identity.rs
scripts/: analyze_coverage.py  build-clean.sh  check_genome_coverage.py
src/: agc.rs  aligner.rs  alignment_filter_core.rs  aln_filter.rs  batch_align.rs  binary_paths.rs  cli.rs  compact_filter.rs  compact_index.rs  compact_mapping.rs  det_map.rs  disk_usage.rs  efficient_filter.rs  fastga_integration.rs  filter.rs  filter_scaffold.rs  filter_stream.rs  filter_types.rs  format_io.rs  giant_component.rs  grouped_mappings.rs  joblist.rs  knn_graph.rs  lib.rs  library_api.rs  main.rs  main_compact.rs  main_simple.rs  mapping.rs  mash.rs  merge.rs  oneali_filter.rs  onelib.rs  orchestrator.rs  paf.rs  paf_filter.rs  paf_merge.rs  pansn.rs  plane_sweep.rs  plane_sweep_core.rs  (+10 more)
tests/: README.md  fastga_integration.rs  filter_tests.rs  mod.rs  synthetic_genomes.rs  test_1aln_roundtrip.rs  test_ani_filtering.rs  test_binary_installation.rs  test_binary_search_optimization.rs  test_centromere_plane_sweep.rs  test_chain_monotonicity.rs  test_chaining_stability.rs  test_ci_integration.rs  test_compact_identity.rs  test_coordinate_properties.rs  test_determinism.rs  test_end_to_end.rs  test_error_handling.rs  test_filtering_modes.rs  test_format_equivalence.rs  test_format_reading.rs  test_genome_pair_grouping.rs  test_golden_checksums.rs  test_grouping_bug.rs  test_integration.rs  test_inter_chromosome_plane_sweep.rs  test_large_scale_equivalence.rs  test_mapping_plane_sweep.rs  test_multi_contig_coords.rs  test_overlap_filtering.rs  test_plane_sweep.rs  test_plane_sweep_symmetry.rs  test_scaffold_debug.rs  test_scaffold_length_filter.rs  test_scaffold_mapping.rs  test_scaffold_overlap.rs  test_scaffold_plane_sweep_filtering.rs  test_scoring_ranking.rs  test_synthetic_simple.rs  test_utils.rs  (+2 more)
tests/golden_data/: README.md  checksums.txt  generate_golden.sh
