[package]
name = "sweepga"
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
license = "MIT"
description = "Efficient pangenome alignment filtering and sparsification tool"
repository = "https://github.com/pangenome/sweepga"
readme = "README.md"
keywords = ["genomics", "pangenome", "alignment", "filtering", "bioinformatics"]
categories = ["science", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nom = "7.1"
rayon = "1.10"
byteorder = "1.5"
tempfile = "3.8"
ordered-float = "4.0"
fastga-rs = "0.1.0"
onecode = "0.1.0"
chrono = "0.4"
flate2 = "1.0"
libc = "0.2"
noodles = { version = "0.100.0", features = ["bgzf"] }
rand = "0.8"

[build-dependencies]
cc = "1.0"
fastga-rs = "0.1.0"

[[bin]]
name = "sweepga"
path = "src/main.rs"

[[bin]]
name = "alnstats"
path = "src/bin/alnstats.rs"

[dev-dependencies]
pretty_assertions = "1.4"
rand = "0.8"
num_cpus = "1.16"
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "filtering_benchmarks"
harness = false
