[package]
name = "sweepga"
version = "0.1.1"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
license = "MIT"
description = "Efficient pangenome alignment filtering and sparsification tool"
repository = "https://github.com/pangenome/sweepga"
readme = "README.md"
keywords = ["genomics", "pangenome", "alignment", "filtering", "bioinformatics"]
categories = ["science", "command-line-utilities"]
exclude = [
    "target/",
    "data/",
    "docs/",
    "examples/",
    "scripts/",
    "test_aln_reader.rs",
    "CLAUDE.md",
]

[features]
enable_1aln_tests = []  # Enables .1aln roundtrip tests (disabled by default due to ONE library cleanup bug)

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nom = "7.1"
rayon = "1.10"
byteorder = "1.5"
tempfile = "3.8"
ordered-float = "4.0"
fastga-rs = { git = "https://github.com/pangenome/fastga-rs", rev = "7d01c36" }
ragc-core = { git = "https://github.com/ekg/ragc", rev = "37af85a" }
onecode = { git = "https://github.com/pangenome/onecode-rs", rev = "f531f5b" }
chrono = "0.4"
flate2 = "1.0"
libc = "0.2"
noodles = { version = "0.100.0", features = ["bgzf"] }
rand = "0.8"

[build-dependencies]
cc = "1.0"
fastga-rs = { git = "https://github.com/pangenome/fastga-rs", rev = "7d01c36" }

[[bin]]
name = "sweepga"
path = "src/main.rs"

[[bin]]
name = "alnstats"
path = "src/bin/alnstats.rs"

[dev-dependencies]
pretty_assertions = "1.4"
rand = "0.8"
num_cpus = "1.16"
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "filtering_benchmarks"
harness = false
